--- a/company-service.properties
+++ b/company-service.properties
@@ -1,3 +1,5 @@
+spring.cloud.discovery.enabled=true
+eureka.client.service-url.default-zone=http://localhost:8761
 yParam=373333
 me=mohamedrbh7@gmail.com
 
