--- a/company-service.properties
+++ b/company-service.properties
@@ -1,5 +1,5 @@
 spring.cloud.discovery.enabled=true
-eureka.client.service-url.default-zone=http://localhost:8761
+eureka.client.service-url.default-zone=http://user:576fbc8f-4839-4d68-a95b-86bcf74ca849@localhost:8761
 yParam=373333
 me=mohamedrbh7@gmail.com
 
